styles/Header.module.css
.container {
    min-height: 8em;
    padding: 0 3em;

    display: flex;
    justify-content: space-between;
    align-items: center;
}

.container h1 {
    font-family: var(--font-accent);
    font-size: clamp(1.5rem, 3vw, 5rem);
}

.navBar {
    min-width: 60%;
}

.navList {
    display: flex;
    justify-content: space-between;
}

.navList li a {
    font-family: var(--font-accent);
    font-size: clamp(1rem, 2vw, 3rem);
}

@media only screen and (max-width: 768px) {
    .container {
        padding: 0 1em;
    }
}

@media only screen and (max-width: 600px) {
    .container {
        flex-direction: column;
        justify-content: space-evenly;
    }
}

@media only screen and (max-width: 320px) {
    .navBar {
        width: 100%;
    }

    .navList {
        justify-content: space-between;
    }

}

